# autocp

./: .gitignore  CMakeLists.txt  Makefile  README.md  manifest.xml  package.xml  plugin_description.xml
include/autocp/: autocp_display.h  autocp_sensing.h  landmarks.h  optimization.h  utils.h  visibility.h  visualization.h
include/autocp/models/: score.h  viewpoint.h
src/: autocp_display.cpp  autocp_display.h  autocp_sensing.cpp  autocp_sensing.h  clicked_control.h  landmarks.cpp  landmarks.h  optimization.cpp  optimization.h  utils.cpp  utils.h  viewpoint.h  visibility.cpp  visibility.h  visualization.cpp  visualization.h
src/models/: control_6dof.h  score.h  viewpoint.cpp  viewpoint.h
test/: test_landmarks.cpp
