<?xml version="1.0"?>
<package>
  <name>autocp</name>
  <version>0.0.1</version>
  <description>Automatically places the rviz camera in pr2_interactive_manipulation</description>
  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rviz</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rviz</run_depend>
  <run_depend>message_runtime</run_depend>
  <export>
    <rviz plugin="${prefix}/plugin_description.xml" />
  </export>
</package>

